syntax = "proto3";

import "google/protobuf/empty.proto";

package mock;

message Tx {
  string text = 1;
  int32  count = 2;
  string state = 3;
  repeated string addrs = 4;
}

message Block {
  repeated Tx txs = 1;
  string nonce = 2;
  string hash = 3;
  string prev = 4;
  int64  timestamp = 5;
  string state = 6;
  string creator = 7;
}

message ShareResp {
  string text = 1;
}


message BlockChain {
  repeated Block blocks = 1;
}

service MockBlockchainService {
  rpc ShareBlock (Block) returns (stream ShareResp) {}
  rpc CommitBlock (Block) returns (stream ShareResp) {}
  rpc SendTx (Tx) returns (ShareResp) {}
  rpc GetBlockChain(google.protobuf.Empty) returns (BlockChain) {}
}

